--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 image:images/image1.jpg["image",200,200,role="right"]
-==Features
+==Features==
 
 * Implements quadrature decoder for rotary shaft encoders.
 * Returns position and direction of rotation.
