--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-==Features==
+== Features
 
 * Implements quadrature decoder for rotary shaft encoders.
 * Returns position and direction of rotation.
@@ -7,6 +7,7 @@
 * Optional increment step size.
 * Optional range limits.
 * Uses interrupt or polling technique.
+
 image:images/image1.jpg["image",200,200,role="right"]
 
 [[general-description]]
