--- a/README.adoc
+++ b/README.adoc
@@ -1,7 +1,7 @@
 
 == Features
 
-image:images/image1.jpg["image",126,153,role="right"] .
+. image:images/image1.jpg["image",126,153,role="right"]
 
 * Implements quadrature decoder for rotary shaft encoders.
 * Returns position and direction of rotation.
